# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-11-21 10:01:40 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-51

    Summary:
      merge from Herve (#37)
    Revision:
      itools--main--0.12--patch-51

    Patches applied:
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-8
       filter out handlers with no accessible view from the navigation menu.
    
     * herve@oursours.net--public/itools--aruni--0.12--patch-31
       such view searching is already implemented.
    

    modified files:
     Changelog cms/skins.py

    new patches:
     herve@oursours.net--public/itools--aruni--0.12--patch-8
     herve@oursours.net--public/itools--aruni--0.12--patch-31


2005-11-20 23:36:48 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-50

    Summary:
      csv, now search uses "itools.catalog" to provide similar interface
    Revision:
      itools--main--0.12--patch-50

    Now the prototype for "search" is:
    
      search(query=None, **kw)
    
    This is equivalent to what "itools.catalog" offers. This way users only
    need to learn one API.

    modified files:
     Changelog catalog/Query.py csv/itools_csv.py
     csv/test_itools_csv.py


2005-11-20 19:45:32 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-49

    Summary:
      csv, remove dangerous "except:" clause (and other minor cleaning)
    Revision:
      itools--main--0.12--patch-49

    The expression:
    
      try:
          ...
      except:
          pass
    
    Is very dangerous. Usually we should never catch all exceptions, and if
    we do we must at least treat the exceptions, not just ignore them.

    modified files:
     Changelog csv/itools_csv.py


2005-11-20 19:24:39 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-48

    Summary:
      catalog, more powerful "and/or" queries, new "Catalog.get_index"
    Revision:
      itools--main--0.12--patch-48
